first steps towards codegen

--- a/generator/templates/type/header.c.jinja
+++ b/generator/templates/type/header.c.jinja
@@ -1,4 +1,4 @@
-{{ get_includes(data) }}
+{{ get(type, "includes") }}
 
-typedef cmc_{{ name }} {{get_ctype(data)}};
+typedef cmc_{{ name }} {{get_ctype(type)}};
 
