--- a/generator/templates/container/ctype.c.jinja
+++ b/generator/templates/container/ctype.c.jinja
@@ -2,4 +2,4 @@ struct {
   {% for field in data%}
     {{ get_ctype(field["type"]) }} {{field["name"]}};
   {% endfor %}
-}
+} cmc_{protvers}_{name}
