--- a/generator/templates/pstring/pack.c.jinja
+++ b/generator/templates/pstring/pack.c.jinja
@@ -1,1 +1,1 @@
-CMC_ERR_ABLE(cmc_pstring_pack(buff, {{from}}, strlen({{from}})), {{on_error}});
+err = CMC_ERR_ABLE(cmc_pstring_pack(buff,{{loc}},strlen({{loc}})),{{on_err}})
