--- a/generator/templates/type/export_include.c.jinja
+++ b/generator/templates/type/export_include.c.jinja
@@ -1,2 +1,2 @@
-{{ include(sformat("cmc/type/{}/{}", protvers, name))}}
-
+{{ '{{include("'+sformat("cmc/type/{}/{}", protvers, name)+'")}}' }}
+{{'{{ include("cmc/err_macros") }}'}}
