--- a/generator/templates/container/pack.c.jinja
+++ b/generator/templates/container/pack.c.jinja
@@ -1,3 +1,3 @@
 {% for field in data %}
-{{get("pack", field["type"], {"from": from+"."+field["name"]})}}
+{{ get_bo("pack", field["type"], {"loc": sformat("{}.{}", loc, field["name"])}) }}
 {% endfor %}
