--- a/generator/templates/container/unpack.c.jinja
+++ b/generator/templates/container/unpack.c.jinja
@@ -1,3 +1,3 @@
 {% for field in data %}
-{{get("unpack", field["type"], {"to": to+"."+field["name"]})}}
+{{ get_bo("unpack", field["type"], {"loc": sformat("{}.{}", loc, field["name"])}) }}
 {% endfor %}
