--- a/generator/templates/f64/pack.c.jinja
+++ b/generator/templates/f64/pack.c.jinja
@@ -1,4 +1,1 @@
-err = cmc_f32_pack(buff, {{from}});
-if(err != CMC_ERR_NO) {
-    {{on_err}}
-}
+err = CMC_ERR_ABLE(cmc_f32_pack(buff, {{loc}}), {{on_err}})
