--- a/generator/templates/pstring/include.c.jinja
+++ b/generator/templates/pstring/include.c.jinja
@@ -1,3 +1,4 @@
 {{ include("cmc/type/pstring") }}
-{{ include("string") }}
 {{ include("cmc/err_macros") }}
+{{ include("string") }}
+{{ get("include", data["countType"]) }}
