--- a/generator/templates/pstring/unpack.c.jinja
+++ b/generator/templates/pstring/unpack.c.jinja
@@ -1,7 +1,5 @@
 {
-  size_t len = cmc_{{ count_type }}_unpack(buff, err);
-  if(*err != CMC_ERR_NO) {
-    {{ on_err }}
-  }
-  {{ dest }} = cmc_unpack_pstring(buff, err, len);
+{{ get("type", data["countType"]) }} len = 0;
+{{ get("unpack", data["countType"], {"to": "len"}) }}
+{{ loc }} = CMC_ERRP_ABLE(cmc_pstring_unpack(buff, len, err), {{ on_err }})
 }
