--- a/generator/templates/type/code.c.jinja
+++ b/generator/templates/type/code.c.jinja
@@ -3,16 +3,16 @@
 {{ include(sformat("cmc/type/{}/{}", protvers, name))}}
 {{ render_includes() }}
 
-cmc_err {{t}}_pack(cmc_buff *buff, {{t}} data) {
-  cmc_err err = CMC_ERR_NO;
-  {{ g("on_err", "return err;")}}
-  {{ get_bo("pack", data, {"from": "data"})}}
-  return err;
+{{t}} {{t}}_unpack(cmc_span *buff, cmc_err *err) {
+    {{ g("on_err", sformat("return ({})", t) + "{0};") }}
+    {{t}} data = ({{t}}){0};
+    {{ get_bo("unpack", data, {"loc": "data"}) }}
+    return data;
 }
 
-{{t}} {{t}}_unpack(cmc_span *span, cmc_err *err) {
-  {{ g("on_err", "return ({"+t+"}){0};") }}
-  {{t}} data;
-  {{ get_bo("unpack", data, {"to": "data"}) }}
-  return data;
+cmc_err {{t}}_pack(cmc_buff *buff, {{t}} data) {
+    {{ g("on_err", "return CMC_ERR_NO;") }}
+    cmc_err err = CMC_ERR_NO;
+    {{ get_bo("pack", data, {"loc": "data"}) }}
+    return err;
 }
